--- a/plugin.yml
+++ b/plugin.yml
@@ -13,10 +13,10 @@ commands:
         usage: /<command> <msg...>
     slap:
         description: Slap a player
-        usage: /<command> [-h|-v] [-d] [target]
+        usage: /<command> [-p] [-h|-v] [-d] [target]
     rocket:
         description: Rocket a player
-        usage: /<command> [target]
+        usage: /<command> [-p] [-h] [target]
     item:
         aliases: [item, i]
         description: Create an item
