--- a/plugin.yml
+++ b/plugin.yml
@@ -14,6 +14,9 @@ commands:
     slap:
         description: Slap a player
         usage: /<command> [-s] [-h|-v] [-d] [target]
+    barrage:
+        description: Send a barrage of arrows
+        usage: /<command> [-s] [target]
     rocket:
         description: Rocket a player
         usage: /<command> [-s] [-h] [target]
