--- a/plugin.yml
+++ b/plugin.yml
@@ -46,6 +46,9 @@ commands:
     spawn:
         description: Teleport to spawn
         usage: /<command>
+    spawnmob:
+        description: Spawn a mob
+        usage: /<command> [-d] [-i] [-r] <mob> [count] [location]
     teleport:
         aliases: tp
         description: Teleport to a location
