Added /broadcast, restored /say.

--- a/config.yml
+++ b/config.yml
@@ -18,4 +18,5 @@ item-names:
     ice: 79
 # Makes /time and /weather broadcast a message
 broadcast-changes: true
-console-say-format: `r[Console] %s
+console-say-format: "<`r*Console`w> %s"
+broadcast-format: "`r[Broadcast] %s"
