Added default item stack size.

--- a/config.yml
+++ b/config.yml
@@ -20,3 +20,4 @@ item-names:
 broadcast-changes: true
 console-say-format: "<`r*Console`w> %s"
 broadcast-format: "`r[Broadcast] %s"
+default-item-stack-size: 1
