--- a/plugin.yml
+++ b/plugin.yml
@@ -23,12 +23,15 @@ commands:
     barrage:
         description: Send a barrage of arrows
         usage: /<command> [-s] [target]
+    
     thor:
         description: Give Thor's hammer
         usage: /<command> [target]
     unthor:
         description: Revoke Thor's hammer
         usage: /<command> [target]
+        _parent: thor
+    
     rocket:
         description: Rocket a player
         usage: /<command> [-s] [-h] [target]
@@ -66,7 +69,7 @@ commands:
         description: Teleport to a location
         usage: /<command> [target] <destination>
     call:
-        description: Call for a teleport
+        description: Request a teleport from someone
         usage: /<command> <target>
     bring:
         aliases: [tphere, summon, s]
@@ -76,18 +79,22 @@ commands:
         aliases: place
         description: Place a player at the location you are looking at
         usage: /<command> <target>
+    
     more:
         description: Expand stack size
         usage: /<command> [-a] [-i] [target]
     time:
         description: Set the time of your current world
         usage: /<command> [world] <time|"current">
+    
     weather:
         description: Change the weather
         usage: /<command> <'stormy'|'sunny'> [duration] [world]
     thunder:
         description: Set the thunder state
         usage: /<command> <'on'|'off'> [duration] [world]
+        _parent: weather
+    
     msg:
         aliases: [message, whisper, pm, tell]
         description: Send a private message to a user
@@ -96,6 +103,8 @@ commands:
         aliases: r
         description: Reply to the last user
         usage: /<command> <message...>
+        _parent: msg
+    
     whereami:
         aliases: [getpos, pos, where]
         description: Get your current location
@@ -112,30 +121,40 @@ commands:
     pong:
         description: Get back a dummy reply
         usage: /<command>
+        _parent: pong
+    
     kick:
         description: Kick a player by name
         usage: /<command> <target> [reason...]
+    
     ban:
         description: Ban a player by name
         usage: /<command> <target> [reason...]
+        _component: bans
     unban:
         description: Unban a player by name
         usage: /<command> <target> [reason...]
+        _component: bans
     isbanned:
         description: Checks if a player's name is banned
         usage: /<command> <target>
+        _component: bans
     bans:
         description: Ban save/load commands
         usage: /<command> ...
+        _component: bans
+    
     mute:
         description: Mute a player
         usage: /<command> <target>
     unmute:
         description: Unute a player
         usage: /<command> <target>
+        _parent: mute
+    
     kit:
         description: Get a kit (or list kits)
         usage: /<command> <kit> [target]
     debug:
-        description: Get server information / benchmark Minecraft clock speed
+        description: Get server information
         usage: /<command> ...
