Added Maven build file. Ant build file removed.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: CommandBook
 main: com.sk89q.commandbook.CommandBookPlugin
-version: __VERSION_MACRO__
+version: "${project.version}"
 commands:
     cmdbook:
         description: CommandBook commands
