--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
   </dependencies>
 
   <build>
-    <sourceDirectory>${basedir}/src/main</sourceDirectory>
+    <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
 
     <!-- Resources -->
     <resources>
