Added exact spawn setting (enabled by default).

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -23,3 +23,4 @@ broadcast-changes: true
 console-say-format: "<`r*Console`w> %s"
 broadcast-format: "`r[Broadcast] %s"
 default-item-stack-size: 1
+exact-spawn: true
