Turned off exact spawn as default.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -23,4 +23,5 @@ broadcast-changes: true
 console-say-format: "<`r*Console`w> %s"
 broadcast-format: "`r[Broadcast] %s"
 default-item-stack-size: 1
-exact-spawn: true
+# As of writing, this does NOT fix spawning on first join (yet)
+exact-spawn: false
