--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -26,3 +26,6 @@ broadcast-format: "`r[Broadcast] %s"
 default-item-stack-size: 1
 # As of writing, this does NOT fix spawning on first join (yet)
 exact-spawn: false
+time-lock:
+    # Example time lock:
+    # world: 3am
