--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,10 @@
 op-permissions: true
 use-display-names: true
 online-on-join: true
+online-list:
+    colored-names: false
+    grouped-names: false
+    show-max-players: true
 verify-name-format: true
 motd: |
     Hello, `Y%name%`w.
@@ -28,4 +32,4 @@ default-item-stack-size: 1
 exact-spawn: false
 time-lock:
     # Example time lock:
-    # world: 3am
+    
