Added /pardon (similar to /unban)
Change-Id: I1f881db435bb65fff7e9a188c29617d4f0a9c8fd

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -181,6 +181,10 @@ commands:
         description: Unban a player by name
         usage: /<command> <target> [reason...]
         _component: bans
+    pardonme:
+        description: Unban a player by name
+        usage: /<command> <target> [reason...]
+        _component: bans
     isbanned:
         description: Checks if a player's name is banned
         usage: /<command> <target>
