fixed command name
Change-Id: I9b117b36ad62087ca09e708cf8e9156d7c26d7f0

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -181,7 +181,7 @@ commands:
         description: Unban a player by name
         usage: /<command> <target> [reason...]
         _component: bans
-    pardonme:
+    pardon:
         description: Unban a player by name
         usage: /<command> <target> [reason...]
         _component: bans
