tell user to use /pardon instead of /unban
Change-Id: Ia633b40bd1f6dee41ddc0123668bf91cd05c1e94

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -178,8 +178,8 @@ commands:
         usage: /<command> <target> [reason...]
         _component: bans
     unban:
-        description: Unban a player by name
-        usage: /<command> <target> [reason...]
+        description: Use /pardon <target> [reason...]
+        usage: /<command>
         _component: bans
     pardon:
         description: Unban a player by name
