changed /pardon to an alias of /unban
Change-Id: I404b6455cd360dce419fea3d2da06e8bf15690b2

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -178,10 +178,7 @@ commands:
         usage: /<command> <target> [reason...]
         _component: bans
     unban:
-        description: Use /pardon <target> [reason...]
-        usage: /<command>
-        _component: bans
-    pardon:
+        aliases: pardon
         description: Unban a player by name
         usage: /<command> <target> [reason...]
         _component: bans
