--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,19 @@
       <artifactId>worldedit</artifactId>
       <version>4.4.2</version>
     </dependency>
-    
+
     <!-- Bukkit -->
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
       <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+
+    <!-- Other dependencies -->
+    <dependency>
+      <groupId>net.sf.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>2.0</version>
     </dependency>
   </dependencies>
 
