--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,29 @@
         </configuration>
       </plugin>
 
+      <!-- Shade -->
+      <!-- We want to bundle in some dependencies -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>1.4</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <artifactSet>
+                <includes>
+                  <include>net.sf.opencsv:opencsv</include>
+                </includes>
+              </artifactSet>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
       <!-- Assembly -->
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
