Added pardon as an alias of unban and made PMs visible in the console. Thanks TexasGamer!

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -210,6 +210,7 @@ commands:
         usage: /<command> <target> [reason...]
         _component: bans
     unban:
+        aliases: pardon
         description: Unban a player by name
         usage: /<command> <target> [reason...]
         _component: bans
