Added [status] parameter to /afk

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -105,7 +105,7 @@ commands:
         _category: player
     afk:
         description: Set yourself as away
-        usage: /<command>
+        usage: /<command> [status]
         _category: player
     debug:
         description: Get server information
