- Added configurable delay to time locks for people with redstone/water issues. - Updated perms handler to WE 4.7's in preparation for release. - Cleanup.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -40,5 +40,6 @@ crappy-wrapper-compat: true
 time-lock:
     # Example time lock:
     #world: 3am
+time-lock-delay: 20
 per-world-warps: false
 per-world-homes: false
