--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sk89q</groupId>
   <artifactId>commandbook</artifactId>
-  <version>1.5.3-SNAPSHOT</version>
+  <version>1.6</version>
   <name>CommandBook</name>
   <description>CommandBook brings general commands to Bukkit</description>
 
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>com.sk89q</groupId>
       <artifactId>worldedit</artifactId>
-      <version>4.7-SNAPSHOT</version>
+      <version>4.7</version>
     </dependency>
 
     <!-- Bukkit -->
